Header1 and Header2

--- a/HTML/reservation-form.html
+++ b/HTML/reservation-form.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>THIS IS THE NEW HEADER 1 <h1>
+    <h2>THIS IS THE SECOND HEADER <h2>
+
+
 </body>
 </html>
