--- a/HTML/reservation-form.html
+++ b/HTML/reservation-form.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>THIS IS THE NEW HEADER 1 <h1>
-    <h2>THIS IS THE SECOND HEADER <h2>
+    <h1>THIS IS THE NEW HEADER 1 <h1> MAKE FONT 9 WITH BLACK COLOR
+    <h2>THIS IS THE SECOND HEADER <h2> 
 
 
 </body>
